--- a/PakhanguProject/app/src/main/res/layout/activity_login.xml
+++ b/PakhanguProject/app/src/main/res/layout/activity_login.xml
@@ -5,16 +5,15 @@
     android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="16dp"
+
     >
 
 
 
     <ImageView
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:background="@null"
         android:gravity="center"
         android:src="@drawable/iconfinder_magnifier_and_car_1421622" />
@@ -22,8 +21,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="이메일"
-        android:layout_marginBottom="16dp"
+        android:hint="email"
+        android:layout_marginBottom="10dp"
         android:id="@+id/EditText_email">
 
     </EditText>
@@ -35,43 +34,49 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="비밀번호"
-        android:layout_marginBottom="16dp"
+        android:hint="password"
+        android:layout_marginBottom="10dp"
         android:id="@+id/EditText_password"
         android:inputType="textPassword">
 
     </EditText>
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그인"
         android:background="@color/colorPink"
         android:id="@+id/login_button"
-    />
+        android:clickable="true"
+        android:layout_marginBottom="10dp"
+        android:paddingRight="10dp"
+        >
 
-
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:src="@drawable/iconfinder_present_1055001"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="or"
-        android:textSize="20dp"
+        android:layout_height="45dp"
+        android:text="Log in"
+        android:textSize="15dp"
+        android:textColor="#000000"
         android:gravity="center"
-        android:textColor="@android:color/black"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        >
-    </TextView>
+    />
+
+</LinearLayout>
 
 
-   <Button
+
+
+   <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:text="페이스북으로 로그인"
-       android:background="@color/colorFacebook"
-       android:layout_marginBottom="20dp"
-       android:id="@+id/facebook_button"
+       android:layout_marginBottom="15dp"
+       android:id="@+id/Google_Button"
        />
 
     <TextView
@@ -79,7 +84,7 @@
         android:layout_height="wrap_content"
         android:text="혹시 회원이 아니신가요?"
         android:gravity="center"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         />
 
     <Button
@@ -87,8 +92,9 @@
         android:layout_height="wrap_content"
         android:text="간편 회원가입"
         android:textColor="@android:color/black"
-        android:textSize="10sp"
+        android:textSize="16sp"
         android:id="@+id/sign_up_login"
+        android:background="@color/colorBlue"
         />
 
 
